--- a/defaultconfigs/sophisticatedbackpacks-server.toml
+++ b/defaultconfigs/sophisticatedbackpacks-server.toml
@@ -386,13 +386,13 @@
 	[server.entityBackpackAdditions]
 		#Chance of an entity spawning with Backpack
 		#Range: 0.0 ~ 1.0
-		chance = 0.01
+		chance = 0.0
 		#Turns on/off addition of loot into backpacks
 		addLoot = false
 		#Turns on/off buffing the entity that wears backpack with potion effects. These are scaled based on how much loot is added.
-		buffWithPotionEffects = true
+		buffWithPotionEffects = false
 		#Turns on/off buffing the entity that wears backpack with additional health. Health is scaled based on backpack tier the mob wears.
-		buffHealth = true
+		buffHealth = false
 		#Turns on/off equiping the entity that wears backpack with armor. What armor material and how enchanted is scaled based on backpack tier the mob wears.
 		equipWithArmor = true
 		#Map of entities that can spawn with backpack and related loot tables (if adding a loot is enabled) in format of "EntityRegistryName|LootTableName"
@@ -405,10 +405,10 @@
 		dropToFakePlayers = false
 		#Chance of mob dropping backpack when killed by player
 		#Range: 0.0 ~ 1.0
-		backpackDropChance = 0.085
+		backpackDropChance = 0.0
 		#Chance increase per looting level of mob dropping backpack
 		#Range: 0.0 ~ 0.2
-		lootingChanceIncreasePerLevel = 0.01
+		lootingChanceIncreasePerLevel = 0.0
 
 	[server.nerfs]
 		#Determines if too many backpacks in player's inventory cause slowness to the player
